app-of-apps/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: youssefmobarak/app2-docker-java:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
